welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: ')' expected but ';' found.
while (nbBiscuit!=4;) {nbBiscuit=nbBiscuit+1 ; avance();} 
                   ^RunFour:3: error: illegal start of statement
while (nbBiscuit!=4;) {nbBiscuit=nbBiscuit+1 ; avance();} 
                    ^