welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit: Int=0
while (nbBiscuit!=4;) {nbBiscuit=nbBiscuit+1 ; avance();}